2003-12-08  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/10060
	* emit-rtl.c (copy_rtx_if_shared): Split out into ...
	(copy_rtx_if_shared_1): here and optimize the last one
	in the sequence into tail-recursion.
	(reset_used_flags): Optimize the last one
	in the sequence into tail-recursion.

2003-12-08  Richard Earnshaw  <rearnsha@arm.com>

	* arm.md: New split to transform ((X << y) - 1) into ~(~(X-1) << y)
	for constant X.

2003-12-08  Richard Sandiford  <rsandifo@redhat.com>

	* calls.c (expand_call): Don't try using tail or recursive calls
	after the function body has been expanded.

2003-12-08  Jan Hubicka  <jh@suse.cz>

	* i386.md (cmpstr expander): Obey TARGET_INLINE_ALL_STRINGOPS

2003-12-08  Arnaud Charlet  <charlet@act-europe.fr>

	PR ada/13324, PR ada/12614
        * doc/install.texi: Update requirements for building Ada.

2003-12-07  David Edelsohn  <edelsohn@gnu.org>
	    Graham Reed <greed@pobox.com>

	* collect2.c (GCC_OK_SYMBOL): Add support for AIX C_WEAKEXT.
	(GCC_UNDEF_SYMBOL): Same.

2003-12-07  Kazu Hirata  <kazu@cs.umass.edu>

	* final.c (final_scan_insn): Don't use FINAL_PRESCAN_LABEL.
	* system.h (FINAL_PRESCAN_LABEL): Poison.
	* doc/tm.texi (FINAL_PRESCAN_LABEL): Remove.

2003-12-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Makefile.in (compare): Combine toplevel and $(SUBDIRS) cases.

2003-12-07  Nathanael Nerode  <neroden@gcc.gnu.org>

	* configure.in, aclocal.m4: Revert to pre-2.5x conversion status.
	* configure: Regenerate with autoconf 2.13.

	* configure.in: Replace AC_INIT, AC_OUTPUT, AC_CANONICAL_SYSTEM
	with modern equivalents.
	* configure: Regenerate.

	* configure.in: Replace gcc_AC_CHECK_TYPE with AC_CHECK_TYPE.
	* aclocal.m4 (gcc_AC_CHECK_TYPE): Remove.
	* configure: Regenerate.

	* configure: Regenerate with (preferred) autoconf 2.57.
	* doc/install.texi: Note that 'gcc' is now a 2.57 directory.

2003-12-07  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/12965